--- a/src/App.css
+++ b/src/App.css
@@ -302,6 +302,14 @@
     border-radius: 3px;
     cursor: pointer;
 }
+@media(max-width:350px){
+    .tituloCat {
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
 .flecha {
   transition: transform 0.3s ease;
   transform: rotate(0deg);
