--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 /*MAIN1---------------------------------------------------------------------------------------------------------------------------------------------------------*/
 .main1{
     width: 90%;
-    min-height: 65vh;
+    max-width: 1920px;
+    min-height: 75vh;
     margin: 0 auto;
 }
 
@@ -364,6 +365,7 @@
     display: flex;
     justify-content: space-between ;
     width: 80%;
+    max-width: 1920px;
     font-size: 1.1rem;
     color: rgb(230, 230, 230);
     
