--- a/src/App.css
+++ b/src/App.css
@@ -350,6 +350,37 @@
 }
 /*Tarjetas de Productos---------------------------------------------------------------------------------------------------------------------------------------------------*/
 
+/*filtros---------------------------------------------------------------------------------------------------------------------------------------------------*/
+.contentFiltros{
+    background-color: rgb(250, 250, 250);
+    border: solid rgb(165, 165, 165) 1px;
+    border-radius: 5px;
+    padding: 15px;
+    width: fit-content;
+    outline: 10px solid rgb(250, 250, 250);
+}
+.inputFiltros{
+    display: flex;
+    gap: 5px;
+}
+.content-btnFiltros{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.btnFiltros{
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    background-color: rgb(44, 44, 44);
+    color: rgb(230, 230, 230);
+    margin-top: 15px;
+    cursor: pointer;
+}
+.btnFiltros:hover{
+    background-color: rgb(71, 71, 71);
+}
+/*filtros---------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 /* Footer -------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 .divFooter{
